Fix issue with nav items overlapping nav logo at some screen resolutions

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -155,6 +155,13 @@
 
   @media only screen and (min-width: 601px) {
 
+    .nav-left{
+      margin-right: 15px;
+    }
+    .nav-right{
+      margin-left: 15px;
+    }
+
     #home-logo{
       width: 35%;
     }
@@ -170,6 +177,10 @@
   }
 
   @media only screen and (min-width: 992px) {
+
+    .nav-left, .nav-right{
+      margin: 0px;
+    }
     
     #home-container .row {
       display: flex;
